
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
name = rqalpha-mod-incremental
version = 0.0.10

[versioneer]
VCS = git
style = pep440-ricequant
versionfile_source = rqalpha_mod_incremental/_version.py
versionfile_build = rqalpha_mod_incremental/_version.py
tag_prefix =
parentdir_prefix = rqalpha-mod-incremental